# hairo2024_right_footer_node

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
features/connection/: connection.cpp  connection.h  context.cpp  context.h
features/drive/: drive.cpp  drive.h
features/flipper/: flipper.cpp  flipper.h
features/ticker/: ticker.cpp  ticker.h
utils/: utils.cpp  utils.h
